# syndicate

./: .cursorignore  .cursorrules  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
python/: LICENSE  README.md  pyproject.toml
python/config/: hedgeye.yaml
python/config/hedgeye/data/: p-to-r-mapping.yaml
python/config/sss/: config.yaml
python/data-tbd/human_queue/requests/: Wendy-choice-1754749542-8d21e840-summary.txt  Wendy-choice-1754749542-8d21e840.json  Wendy-choice-1754750288-6ad4dd55-summary.txt  Wendy-text_input-1755443121-08038dbf.json
python/data/human_queue/requests/: Wendy-choice-1754750288-6ad4dd55.json  Wendy-text_input-1755443121-08038dbf-summary.txt
python/demos/: chat_with_wendy.py  simple_agent_demo.py  wendy_weather.py
python/junk/: wendy_enhanced.py
python/scripts/: get_yt_transcript.py  run_youtube_triage.py  test_config_loader.py
python/scripts/fin/: fetch_ibkr_positions.py  portfolio_report.py
python/scripts/hedgeye/: README.md  clear_today_price_cache.py  combine_data.py  combine_rr_data.py  download_ham_etf_holdings.py  generate_cr_time_series_plots.py  generate_enhanced_plots.py  generate_enhanced_rr_plots.py  generate_plots.py  generate_rr_plots.py  parse_emails.py  parse_etf_pro.py  parse_portfolio_solutions.py  parse_rr_emails.py  rename_hedgeye_emails.py  run_both_pipelines.py  run_cr_pipeline.py  run_full_pipeline.py  run_full_rr_pipeline.py
python/scripts/hedgeye/fixes/: analyze_mappings.py  create_corrected_mappings.py  fix_treasury_mappings.py  fix_unmapped_symbols.py  next_steps_implementation.py
python/scripts/hedgeye/migration/: backup_for_rstudio.sh  restore_on_rstudio.sh
python/scripts/hedgeye/rr/: generate_enhanced_rr_plots.py  parse_rr_emails.py
python/scripts/hedgeye/setup/: create_conf.py  match_entities.py
python/scripts/hedgeye/testing/: test_fmp_integration.py
python/scripts/hedgeye/testing/spark/: fix_spark_test.py  test_spark_simple.py
python/servers/: accounts_server.py  drafts_server.py  human_input_server.py  market_server.py
python/src/ace/: __init__.py
python/src/ace/sid/: __init__.py  __main__.py  builder.py  chatgpt_builder.py  claude_builder.py  cursor_builder.py  gemini_builder.py  warp_builder.py
python/src/fin/: __init__.py  catalog.py  country_codes.py  ibkr.py  models.py  portfolio.py  seed_fmp.py
python/src/fin/ds/: __init__.py
python/src/fin/ds/fid/: __init__.py  parser.py
python/src/fin/ds/ibkr/: __init__.py  manual.py
python/src/hedgeye/: config_loader.py  cr_enrich_ranges.py  cr_time_series_plotting.py  enhanced_rr_plotting.py  enrich_etf_pro.py  fetch_prices.py  parse_etf_pro_weekly.py  price_cache.py  process_etf_pro_weekly.py  rr_pipeline.py  run_rr_parser.py  use_rr.py
python/src/hedgeye/ds/cr/: cr_enrich_ranges.py  cr_merge_ranges.py  cr_time_series_plotting.py
python/src/hedgeye/ds/rr/: parser.py  (+6 more)
python/src/hedgeye/fmp/: create_he_fmp_map.py  load_entities.py  price_fetcher.py
python/src/shared/: config.py
python/src/sss/: __init__.py  agent_provider.py  agents.py  human_interface.py  instruction_templates.py  mcp_agent_configs.py  sessions.py  shared_config.py  weather_config.py  youtube_agent.py  youtube_tools.py
python/src/sss/agents/: __init__.py  base.py  youtube.py
python/src/syndicate/: __init__.py  agents.py  human_interface.py  instruction_templates.py  mcp_agent_configs.py  sessions.py  shared_config.py  weather_config.py
python/tests/: test_agents.py  test_human_interface.py
(+208 files in other folders)
