[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syndicate"
version = "0.1.0"
description = "SiloSlayer Syndicate - AI agents for information liberation"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Randy Kerber", email = "randykerber@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openai-agents",
    "openai",
    "asyncio", 
    "requests",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/randykerber/syndicate"
Repository = "https://github.com/randykerber/syndicate"
Documentation = "https://github.com/randykerber/syndicate/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/syndicate"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
