[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syndicate"
version = "0.1.0"
description = "SiloSlayer Syndicate - AI agents for information liberation"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Randy Kerber", email = "randykerber@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openai-agents",
    "python-dotenv",
    "youtube-transcript-api",
    # Hedgeye integration dependencies
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.3.0",
    # "duckdb>=1.3.0",  # May not be used - uncomment if needed
    "matplotlib>=3.10.3",
    "requests>=2.32.4",
    # "pyspark==3.5.3",  # Not used - keeping commented
    "jupyter>=1.1.1",
    "yfinance>=0.2.63",
    "claude-agent-sdk>=0.1.16",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
    "pandas-stubs==2.3.2.250926",
]

[project.urls]
Homepage = "https://github.com/randykerber/syndicate"
Repository = "https://github.com/randykerber/syndicate"
Documentation = "https://github.com/randykerber/syndicate/docs"

[tool.hatch.build.targets.wheel]
packages = [
    "src/sss",
    "src/ace",
    "src/hedgeye"
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
